<resources>
    <string name="app_name">My Portfolio</string>
    <string name="bio">Hi! My name is Johnny Nguyen and welcome to my android portfolio. I am a self taught android developer looking to get an entry level job in the field. I figured the best way to do this would be to showcase my abilities creating an android app!</string>
    <string name="bioBtnTxt">An introduction to the app</string>
    <string name="bioBtn">My Bio</string>
    <string name="weatherBtnTxt">View my weather app!</string>
    <string name="weatherBtn">Weather</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="appwidget_text">Test Widget Text</string>
    <string name="txtBtnBrainGame">A simple numbers game</string>
    <string name="btnBrainGame">Brain Game</string>
    <string name="add_widget">Add widget</string>
    <string name="btnTicTacToe">Tic Tac Toe</string>
    <string name="txtBtnTic">Classic game</string>
    <string name="txtBtnSounds">Hear natures sounds</string>

    <string name="action_settings">Settings</string>
    <string name="txtBtnConverter">Convert your currency</string>
    <string name="txtBtnDice">Simple dice game</string>
    <string name="txtDice">Play Dice</string>

    <string-array name="currency">
        <item>Dollars</item>
        <item>Euros</item>
        <item>Pounds</item>
        <item>Rupees</item>
        <item>Yen</item>
    </string-array>
</resources>
